[gd_scene load_steps=2 format=3 uid="uid://shop_card001"]

[ext_resource type="Script" path="res://scripts/ui/shop_item_card.gd" id="1_script"]

[node name="ShopItemCard" type="PanelContainer"]
custom_minimum_size = Vector2(160, 220)
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="VBox"]
custom_minimum_size = Vector2(140, 100)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
autowrap_mode = 2

[node name="TypeLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CostLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Buy"
